--- a/A14_threads.ipynb
+++ b/A14_threads.ipynb
@@ -17,24 +17,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1\n",
-    "Execute the following cell to activate styling for this tutorial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import HTML\n",
-    "HTML(f\"<style>{open('my.css').read()}</style>\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## What is a Thread\n",
     "A thread is a separate flow of execution through your code. This means that different threads may be running the same code at different times, but the again they may be executing entirely different code.\n",
     "\n",
@@ -309,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5 Data Contention\n",
+    "## 6 Data Contention\n",
     "Locks can also be used to protect data.  In the program below we create 3 threads.  The threads increment two counters in a loop.  Note that access to \"count1\" is unprotected, but \"count2\" is protected by a lock.  \n",
     "\n",
     "As we will see below, when a thread executes the instruction:<pre>count1 += 1</pre> it is possible that the kernel will suspend the thread in the middle of the instruction.  This can easily result in data corruption.  Before we investigate, let's run the program.  Each count gets incremented 6,000,000 times, but what are he final values of these counts?"
@@ -371,7 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6 Data Corruption\n",
+    "## 7 Data Corruption\n",
     "The data corruption occurs because:<pre>\n",
     "    count1 += 1</pre>\n",
     "is not an atomic operation.  We can see this by examining the byte code using the disassembler module:"
@@ -391,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7 Atomic Instructions\n",
+    "## 8 Atomic Instructions\n",
     "What can happen is that the thread can get suspended by the kernel just after the INPLACE_ADD instruction.  \n",
     "\n",
     "Suppose \"x\" is some value, say 700.  Inside the interpreter, the INPLACE_ADD will add 1 to 700 and store 701 in a machine register.  If the thread then gets suspended, this register will be cached by the kernel.  \n",
@@ -419,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8 Condition Variables\n",
+    "## 9 Condition Variables\n",
     "In the above, the \"sort\" method is executed as a single byte code instruction CALL_METHOD.  This is what makes it atomic.  The Python interpreter cannot suspend a thread part way through a byte code instruction.\n",
     "\n",
     "The instruction:<pre>count1 += 1</pre>was several byte code instructions and therefore was non-atomic.\n",
@@ -493,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9 Events\n",
+    "## 10 Events\n",
     "Event objects are very similar to condition variables.  \n",
     "\n",
     "The event object is created by:<pre>event = Event()</pre>\n",
@@ -552,7 +534,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10 Bounded Semaphores\n",
+    "## 11 Bounded Semaphores\n",
     "Bounded semaphores are like a set of multiple locks.  \n",
     "\n",
     "A bounded semaphore is created with an initial count:<pre>semaphore = BoundedSemaphore(3)</pre>\n",
@@ -629,7 +611,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11 Barriers\n",
+    "## 12 Barriers\n",
     "Barriers are yet another synchronization object.  \n",
     "\n",
     "A barrier is created with a count and a timeout:<pre>b = Barrier(5, timeout=10)</pre>\n",
@@ -695,14 +677,14 @@
     "    \n",
     "    print(\"end of program\")\n",
     "    \n",
-    "main()\n"
+    "main()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 12 Timers\n",
+    "## 13 Timers\n",
     "I should mention the simple Timer:"
    ]
   },
@@ -725,7 +707,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 13 Benchmarking\n",
+    "## 14 Benchmarking\n",
     "Finally, as mentioned in the introduction to this tutorial, with multi threaded CPU-bound programs, the threads are executed sequentially because of the GIL.  Performance then becomes an issue.\n",
     "\n",
     "It is recommended to use the multiprocessing module to speed thing up in such situations.  We don't use threads in this case, but execute code in separate processes such that the GIL is irrelevant.\n",
@@ -818,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
