general tidy up

--- a/A05_functions.ipynb
+++ b/A05_functions.ipynb
@@ -311,7 +311,7 @@
     "Mind you, some purists say there should only be a single return statement in any function.  However, the pragmatist is happy with the above because the code is easy to read and the return points are easily identified.\n",
     "\n",
     "Let's revisit functions with several parameters.  Let's define a function that calculates the area of a rectangle defined by coordinates of the top left and bottom right points:\n",
-    "<img src=\"images/Slide2.jpg\"/>"
+    "<img src=\"resources/images/Slide2.jpg\"/>"
    ]
   },
   {
