--- a/A07_modules.ipynb
+++ b/A07_modules.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "mkdir -p libs"
+    "mkdir -p resources/libs"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile libs/mylib.py\n",
+    "%%writefile resources/libs/mylib.py\n",
     "def f1():\n",
     "    print(\"f1\")\n",
     "def f2():\n",
@@ -135,7 +135,7 @@
     "The PYTHONPATH is normally set up using <pre>module load python/3.7</pre>but can be modified on the command line or preferably inside our code.  \n",
     "\n",
     "To modify the PYTHONPATH inside our code we can write <pre>import sys\n",
-    "sys.path.insert(0, \"libs\")</pre>\n",
+    "sys.path.insert(0, \"resources/libs\")</pre>\n",
     "\"sys.path\" represents the PYTHONPATH in program code.  \n",
     "\n",
     "\"insert\" prepends the directory \"libs\" to the PYTHONPATH.  Changing the PYTHONPATH inside our code only changes the PYTHONPATH for this program.  Other programs will be unaffected.  \n",
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(0, \"libs\")\n",
+    "sys.path.insert(0, \"resources/libs\")\n",
     "\n",
     "import mylib\n",
     "mylib.f1()\n",
@@ -168,37 +168,6 @@
    "metadata": {},
    "source": [
     "## 6\n",
-    "As I said in the introduction, notebook sometimes looses output.  This has happened in the above cell.  If we run the code on the command line, Eclipse or PyCharm we'll get additional output.  \n",
-    "\n",
-    "I can simulate what should happen by adding a notebook magic command in the middle of the code.  Obviously this needs to be removed when running the code for real."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.insert(0, \"libs\")\n",
-    "\n",
-    "import mylib\n",
-    "%run libs/mylib\n",
-    "mylib.f1()\n",
-    "mylib.f2()\n",
-    "mylib.f3()\n",
-    "mylib.f4()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 7\n",
     "The above code produces the correct output.  \n",
     "\n",
     "We can see from the above that import executes all the code in the imported module before continuing with our code.  Notice how the functions are all called twice: once because of the tests inside the module and once because we called the functions from our code.  \n",
@@ -224,7 +193,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile libs/mylib.py\n",
+    "%%writefile resources/libs/mylib.py\n",
     "def f1():\n",
     "    print(\"f1\")\n",
     "def f2():\n",
@@ -246,8 +215,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8\n",
-    "Now the module works correctly.  It won't output anything when imported, but will run the tests when run in isolation.  Since the module doesn't produce any output when imported, we can remove the magic command.  The following code will now produce the same output as when run elsewhere.  \n",
+    "## 7\n",
+    "Now the module will work correctly (see below).  It won't output anything when imported, but will run the tests when run in isolation.  Since the module doesn't produce any output when imported, we can remove the magic command.  The following code will now produce the same output as when run elsewhere.  \n",
     "\n",
     "You'll often see this if statment in library modules.  You can use it in your own code if you think your code might be made into a module some time in the future."
    ]
@@ -276,10 +245,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9\n",
+    "## 8\n",
     "The following diagram shows what is happening in memory.  Each file has a symbol table that is a dictionary of all the global symbols in the file.  The \"mylib\" module has 4 global symbols: each of the function pointers.  Our code has only one global symbol (in the import statement): \"mylib\"\n",
     "\n",
-    "<img src=\"images/Slide6.jpg\"/>\n",
+    "<img src=\"resources/images/Slide6.jpg\"/>\n",
     "\n",
     "f.o. stands for function object."
    ]
@@ -292,7 +261,7 @@
     }
    },
    "source": [
-    "## 10\n",
+    "## 9\n",
     "It's common to abbreviate module names when they are imported.  In our case, the module name is quite short in any case by other modules have longer names.  To use an alias we use:\n",
     "<pre>import mylib as m</pre>\n",
     "As another example, when using \"matplotlib\" it is conventional to use:\n",
@@ -329,10 +298,10 @@
     }
    },
    "source": [
-    "## 11\n",
+    "## 10\n",
     "The alias modifies our diagram slightly.  Our symbol table now contains \"m\" rather than \"mylib\":\n",
     "\n",
-    "<img src=\"images/Slide7.jpg\"/>"
+    "<img src=\"resources/images/Slide7.jpg\"/>"
    ]
   },
   {
@@ -343,7 +312,7 @@
     }
    },
    "source": [
-    "## 12\n",
+    "## 11\n",
     "An alternative to importing directly is to use the \"from\" construct.  \"from\" will import symbols from a module into our symbol table.\n",
     "<pre>from mylib import *</pre>\n",
     "imports all the symbols from the module into our symbol table.  When using \"from\" it's as if we have defined the functions locally and we do not supply a module name in the calls."
@@ -373,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 13\n",
+    "## 12\n",
     "The memory diagram now looks like:"
    ]
   },
@@ -381,14 +350,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"margin-top: -10%;margin-bottom: -15%;display:block\"><img src=\"images/Slide8.jpg\"/></div>"
+    "<div style=\"margin-top: -10%;margin-bottom: -15%;display:block\"><img src=\"resources/images/Slide8.jpg\"/></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 14\n",
+    "## 13\n",
     "Note that using * imports the entire symbol table from \"mylib\" and this is regarded as bad practice because you are importing an unknown set of symbols.  Its much better to be specific:"
    ]
   },
@@ -412,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 15\n",
+    "## 14\n",
     "Sometime there is a name clash between remote and local functions.  In that case the latest definition wins.  So, for example, if we define a local \"f1\" in code below the \"from\" import then the local definition will appear in our symbol table and hence the local \"f1\" will be called:"
    ]
   },
@@ -439,7 +408,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 16\n",
+    "## 15\n",
     "If the \"from\" statement comes after the local definition, it effectively masks the local function and the remote function will be called:"
    ]
   },
@@ -466,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 17\n",
+    "## 16\n",
     "Note you can use aliases with \"from\" as we could with the \"import\" statemet.  In the example below the remote \"f1\" function is imported into our local symbol table as \"ff1\" and now both the local and remote \"f1\" calls can be made:"
    ]
   },
@@ -495,7 +464,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 18\n",
+    "## 17\n",
     "Using function aliases is probably a bad idea - its confusing,  But, class aliases seem to work very well in practice, whether they are used with \"import\" or \"from\".  \n",
     "\n",
     "So which is best, \"import\" or \"from\".  I personally prefer \"import\" because if you encounter a problem in a library method after importing several modules, you can tell immediately which library is causing the problem.  If, on the other hand, you import everthing into your local symbol table you have no idea which library is causing the problem.  Furthermore, the is a possibility that one library will overwrite the symbols of a library you previously imported - no such problems exist when using \"import\"\n",
