--- a/B01_numpy.ipynb
+++ b/B01_numpy.ipynb
@@ -18,24 +18,6 @@
    "metadata": {},
    "source": [
     "## 1\n",
-    "Execute the following cell to activate styling for this tutorial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import HTML\n",
-    "HTML(f\"<style>{open('my.css').read()}</style>\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2\n",
     "Numpy is a library that lets us work with multi-dimensional arrays.  \n",
     "\n",
     "Most scientific analysis in Python uses Numpy.  Several libraries extend Numpy including Pandas (which is dealt with in a separate tutorial).\n",
@@ -68,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3\n",
+    "## 2\n",
     "By default Numpy creates arrays of floats, but the last example shows how to work with arrays of int.  By the way, Numpy works with an internal precision of about 15 significant figures for floats, but the statement\n",
     "<pre>np.set_printoptions(precision=3)</pre>\n",
     "is just for rounding the printed output to 3 decimal places.  \n",
@@ -92,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4\n",
+    "## 3\n",
     "\n",
     "All Numpy arrays are stored as 1 dimensional arrays, irrespective of their real dimensionality.  The data in the array is pointed at by a structure called the \"view\" which contains, amongst other things, this dimensionality information.\n",
     "\n",
@@ -102,7 +84,7 @@
     "\n",
     "\"reshape\" takes an existing Numpy array and creates a new view on the same data.  The idea is that the new view contains different dimensionality data.  Since the data is unchanged, the new dimensions must contain the same number of data points as the original array.  Thus in the example below, we start with a 1 dimensional array with 24 elements and reshape it to a 3 dimensional array with 2 * 3 * 4 = 24 elements.  \n",
     "\n",
-    "<img src=\"images/Slide9.jpg\" style=\"margin-bottom: -25%;\"/>\n"
+    "<img src=\"resources/images/Slide9.jpg\" style=\"margin-bottom: -25%;\"/>\n"
    ]
   },
   {
@@ -124,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5\n",
+    "## 4\n",
     "We can prove these two Numpy arrays share data by modifying one of the arrays - the other array sees the changes:"
    ]
   },
@@ -145,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6\n",
+    "## 5\n",
     "Creating some more Numpy arrays ..."
    ]
   },
@@ -169,7 +151,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7\n",
+    "## 6\n",
     "Numpy works with multi-dimensional data (vectors) rather than scalers.  However we may want to work with an existing function that only takes scaler input.  If we try passing a list to such a function it fails:"
    ]
   },
@@ -190,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8\n",
+    "## 7\n",
     "To overcome this, Numpy provides a \"vectorize\" function.  This we allow us to pass vectors to our function whilst still allowing it to work with scalers:"
    ]
   },
@@ -215,7 +197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9\n",
+    "## 8\n",
     "In Numpy you can perform matrix arithmetic on 2 dimensional arrays.  For example to matrix multiply two arrays:"
    ]
   },
@@ -235,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10\n",
+    "## 9\n",
     "However, if the arrays are not 2 dimensional then this wouldn't work in general.  Therefore the @ sign is only used for matrix multiplication.  All other mathematical operators and functions are performed element by element on Numpy arrays.  \n",
     "\n",
     "It is easy to see how this scheme works on arrays of the same size.  Consider the following operations with 1 dimensional arrays.  Peforming calculations, element by element, on \"a\" and \"b\" of shape=(7,) means performing the 7 calculations:  \n",
@@ -269,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11\n",
+    "## 10\n",
     "Sometimes we need to change the type of data in a Numpy array.  For example, with images, pixel values can be stored as decimal (from 0.0 to 1.0) or as integers (0 to 255).  If we are creating a black and white image, we might set the array up with integers 0 or 1 and then convert the array to floats.  Such operations are called casts.\n",
     "\n",
     "Below are some examples.  Note the use of the \"fronfunction\" method.  This method calls a function (lambda) to calculate the value of each element in the array.  Since we are creating a (4,4) array, there will be 16 calculations to perform.  The \"i\" and \"j\" inputs to the lambda witll vary from 0 to 3, and calculate: <pre>(i+2) * (j+2)**1.4</pre>"
@@ -304,7 +286,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 12\n",
+    "## 11\n",
     "As with ordinary Python arrays (lists and tuple) we can use slicing.  The notation in Numpy is slightly different from normal - all the slicing parameters are enclosed in a single set of [ ] brackets."
    ]
   },
@@ -327,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 13\n",
+    "## 12\n",
     "Note the default slice, `a[::]`, creates a shallow copy of \"a\"."
    ]
   },
@@ -352,7 +334,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 14\n",
+    "## 13\n",
     "We can also slice multi-dimensional arrays.  In the following example we slice elements 0 and 1 of each dimension.  Thus we will end up with a 2 x 2 x 2 array:"
    ]
   },
@@ -376,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 15\n",
+    "## 14\n",
     "Sometimes we want to combine two arrays into one.  We can use horizontal or vertical stacking for this:"
    ]
   },
@@ -401,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 16\n",
+    "## 15\n",
     "Next we look at indexing.  This is where we select parts of an Numpy array that we are interested in.  Similar to slicing, indexing is a little more flexible because selected elements do not need to be adjacent.  \n",
     "\n",
     "If the index is 1 dimensional, when it is applied to the original array, we will obtain a new 1 dimensional array.  If the index is 2 dimensional, the result will be 2 dimensional.\n",
@@ -433,7 +415,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 17\n",
+    "## 16\n",
     "Indexing has applications in image processing.  If we have a monochrome image with pixel values between 0 and 255, we can convert it to a black and white image.  To do this, we define a theshold, above which we change pixels to white (255) and otherwise to black (0).\n",
     "\n",
     "Images once read into memory are usually converted to a Numpy array.  So, to see in principal, how this conversion would take place, let's define a Numpy array to represent an image and apply indexing to it.  \n",
@@ -486,7 +468,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 18\n",
+    "## 17\n",
     "As stated above Numpy computes element by element when evaluating mathematical expressions.  When the arrays are different sizes this presents a problem as the elements don't match.  To get round this Numpy uses broadcasting.  \n",
     "\n",
     "Broadcasting is a technique where arrays are expanded to a common size.  In the following example we are multiplying two arrays:<pre>X.shape = (6,)\n",
@@ -528,7 +510,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 19\n",
+    "## 18\n",
     "With broacasting Numpy first works out the shape of the expanded array and then fills in the new elements with copies of the siblings.  In the above example X is broadcast horizontally and Y is broadcast vertically.\n",
     "\n",
     "To see the actual arrays after they have been broadcast, I've simulated broadcasting in the following code:"
@@ -560,7 +542,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 20\n",
+    "## 19\n",
     "Broadcasting is very useful when it comes to surface plots.  In the above example if you think about a 3 dimensional space, in the XY plane coordinates of points will be\n",
     "<pre>(1, 1), (1, 2), (1, 3), (1, 4), \n",
     "(2, 1), (2, 2), (2, 3), (2, 4), \n",
@@ -631,7 +613,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
