--- a/B08_SciKitImage.ipynb
+++ b/B08_SciKitImage.ipynb
@@ -18,25 +18,6 @@
    "metadata": {},
    "source": [
     "## 1\n",
-    "Execute the following cell to activate styling for this tutorial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%matplotlib inline\n",
-    "from IPython.display import HTML\n",
-    "HTML(f\"<style>{open('my.css').read()}</style>\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2\n",
     "SciKitImage is a library that performs a number of image processing transformations on images.  All images, once read into memory are stored as Numpy arrays.  Images can be full color or monochrome.\n",
     "\n",
     "To get the feel of what an image looks like in memory, consider the following Numpy array:"
@@ -81,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3\n",
+    "## 2\n",
     "We've use MatPlotLib to display the image.  Note that MatPlotLib always uses a colormap when displayinh images and this gives false colors unless we use the \"gray\" colormap.  \n",
     "\n",
     "As you can see, the pixels have a value between 0 and 255 to represent color, with:\n",
@@ -130,7 +111,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4\n",
+    "## 3\n",
     "Color images are more complicated.  In this case each pixel has a value for the red, green and blue component.  Again values are in the range 0 to 255 or 0.0 to 1.0.\n",
     "\n",
     "Here is a 10 x 10 color array:"
@@ -167,7 +148,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5\n",
+    "## 4\n",
     "Color images can also contain a transparency factor.  This is added to the RGB value for each pixel.  In this example I've set it to 200 for the top left pixels and 100 everywhere else:"
    ]
   },
@@ -202,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6\n",
+    "## 5\n",
     "Now lets work with a real monochrome image of rice grains.  We'll use PIL to read the image into memory and then convert to Numpy array of int:"
    ]
   },
@@ -219,7 +200,7 @@
     "import matplotlib.pyplot as plt\n",
     "plt.subplots(dpi=72*2)\n",
     "\n",
-    "image = PIL.Image.open(\"images/rice.jpg\")\n",
+    "image = PIL.Image.open(\"data/images/rice.jpg\")\n",
     "rice = np.asarray(image, dtype=\"int32\")\n",
     "plt.imshow(rice, cmap=\"gray\")\n",
     "plt.show()"
@@ -229,7 +210,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7\n",
+    "## 6\n",
     "The idea is to count the number of grains of rice in this image.  \n",
     "\n",
     "Although the rice image looks monochrome it is actually a color image with the red, green and blue values equal for any particular pixel.  Let's print the shape of the Numpy array and look at a slice of the image to confirm this:"
@@ -249,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8\n",
+    "## 7\n",
     "SciKitImage works with true monochrome images.  In our case we can simply choose one of the three color channels to form our monochrome image.  It doesn't matter which one as they are all identical.  I'll choose the red channel:"
    ]
   },
@@ -268,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9\n",
+    "## 8\n",
     "To simplify the analysis we will convert the image into black and white.  What we have to do is look at each pixel in turn and decide if it is above a threshold.  If it is then change it to white, but otherwise change it to black.\n",
     "\n",
     "After playing around with the image, I found 120 was a good value to use as the threshold.  We can use Numpy's indexing ability to perform the transformation to black and white:"
@@ -297,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10\n",
+    "## 9\n",
     "You'll notice this generates some speckle.  SciKitImage has an algorithm to remove it, but we have to \"label\" the image before we can use any SciKitImage algorithms.\n",
     "\n",
     "To see what \"label\" does we'll look at part of the image after the speckle is removed and inspect the underlying Numpy array.  Note that:<pre>morphology.remove_small_objects(labelled)</pre>\n",
@@ -329,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 11\n",
+    "## 10\n",
     "So labelling uses the white pixels to identify grains of rice.  In the part of the image shown above, we are seeing a small part of rice grain 14 and most of grain 17.  \n",
     "\n",
     "The colors displayed in the plot are dependent of the colormap \"cool\".  Of course the labelling extends across the entire array and we can now determine how many rice grains there are by looking at the largest value in the array: "
@@ -354,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 12\n",
+    "## 11\n",
     "The labelling not only identifies each grain of rice, but by counting the pixels of a given label we can determine its size.  SciKitImage will do this for us using:\n",
     "<pre>skimage.measure.regionprops(labelled)</pre>\n",
     "While calculating the size of each grain, SciKitImage also calculates the position of the surrounding rectangle and its centroid.  \n",
@@ -387,7 +368,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 13\n",
+    "## 12\n",
     "Rice grain 85 is an interesting object.  Let's look more closely at that part of the image:"
    ]
   },
@@ -422,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 14\n",
+    "## 13\n",
     "Grain 85 has a hole in it.  We can use:<pre>scipy.ndimage.binary_fill_holes</pre>to fill in holes like this:"
    ]
   },
@@ -438,6 +419,7 @@
     "\n",
     "plt.subplots(dpi=72*2)\n",
     "labelled = nd.binary_fill_holes(labelled).astype(int)\n",
+    "\n",
     "#reapply labelling\n",
     "labelled = measure.label(labelled)\n",
     "\n",
@@ -462,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 15\n",
+    "## 14\n",
     "SciKitImage has many other algorithms that can be applied to different image types.  \n",
     "One of the more interesting algorithms is edge detection.  The following edge detection algorithm was developed by John F. Canny in 1986.\n",
     "\n",
@@ -482,23 +464,9 @@
     "# import PIL.ImageDraw as ImageDraw\n",
     "\n",
     "plt.subplots(dpi=72*2)\n",
-    "image = PIL.Image.open(\"images/chris.jpg\")\n",
-    "# grid = Image.new('RGBA', size=(image.width, image.height), color=(255,255,255))\n",
-    "# blank = Image.new('RGBA', size=(image.width, image.height), color=(255,255,255))\n",
-    "# step_size = 50\n",
-    "\n",
-    "# gridCanvas = ImageDraw.Draw(grid)\n",
-    "# for x in range(0, image.width, step_size):\n",
-    "#     line = ((x, 0), (x, image.height))\n",
-    "#     gridCanvas.line(line, fill=(0, 0, 0), width=1)\n",
-    "    \n",
-    "# for y in range(0, image.height, step_size):\n",
-    "#     line = ((0, y), (image.width, y))\n",
-    "#     gridCanvas.line(line, fill=(0, 0, 0), width=1)\n",
-    "\n",
-    "# Make sure images got an alpha channel\n",
-    "#image = image.convert(\"RGBA\")\n",
-    "plt.imshow(image, cmap=plt.cm.gray) #    plt.show()\n"
+    "image = PIL.Image.open(\"data/images/chris.jpg\")\n",
+    "plt.imshow(image, cmap=plt.cm.gray)\n",
+    "plt.show()"
    ]
   },
   {
@@ -520,12 +488,12 @@
     "import matplotlib.pyplot as plt\n",
     "plt.subplots(dpi=72*2)\n",
     "\n",
-    "image = PIL.Image.open(\"images/chris.jpg\")\n",
+    "image = PIL.Image.open(\"data/images/chris.jpg\")\n",
     "\n",
     "image = image.convert('L')\n",
     "image = np.asarray(image, dtype=\"int32\")\n",
     "plt.imshow(image, cmap=plt.cm.gray) #    plt.show()\n",
-    "print(image.shape)"
+    "print(f\"Image Shape = {image.shape}\")"
    ]
   },
   {
@@ -608,7 +576,7 @@
     "import matplotlib.pyplot as plt\n",
     "plt.subplots(dpi=72*2)\n",
     "\n",
-    "tablets = PIL.Image.open(\"images/tablets.jpg\")\n",
+    "tablets = PIL.Image.open(\"data/images/tablets.jpg\")\n",
     "plt.imshow(tablets)\n",
     "plt.show()"
    ]
@@ -633,7 +601,7 @@
     "import skimage.io as io \n",
     "plt.subplots(dpi=72*2)\n",
     "\n",
-    "tablets = io.imread(\"images/tablets.jpg\", as_gray=True)\n",
+    "tablets = io.imread(\"data/images/tablets.jpg\", as_gray=True)\n",
     "plt.imshow(tablets, cmap=\"gray\")\n",
     "plt.show()"
    ]
@@ -662,7 +630,7 @@
     "plt.subplots(dpi=72*2)\n",
     "\n",
     "# perform edge detection on grayscal image\n",
-    "image = io.imread(\"images/tablets.jpg\", as_gray=True) * 256\n",
+    "image = io.imread(\"data/images/tablets.jpg\", as_gray=True) * 256\n",
     "edges = canny(image, sigma=4, low_threshold=0, high_threshold=30)\n",
     "plt.imshow(edges, cmap=\"gray\")\n",
     "plt.show()"
@@ -700,7 +668,7 @@
     "pd.set_option('display.max_rows', None)\n",
     "\n",
     "# perform edge detection on grayscal image\n",
-    "image = io.imread(\"images/tablets.jpg\", as_gray=True) * 256\n",
+    "image = io.imread(\"data/images/tablets.jpg\", as_gray=True) * 256\n",
     "edges = canny(image, sigma=4, low_threshold=0, high_threshold=30)\n",
     "\n",
     "# radii range from 33 to 35\n",
@@ -766,7 +734,7 @@
    "metadata": {},
    "source": [
     "## 24\n",
-    "Now we can plot the tablets with their ordinal number (Index+1).  Alas, one tablet gets missed.\n",
+    "Now we can plot the tablets with their ordinal number (Index+1).\n",
     "\n",
     "For completeness, I'll give you all the code for this example:"
    ]
@@ -808,7 +776,7 @@
     "    return df\n",
     "\n",
     "# perform edge detection on grayscal image\n",
-    "image = io.imread(\"images/tablets.jpg\", as_gray=True) * 256\n",
+    "image = io.imread(\"data/images/tablets.jpg\", as_gray=True) * 256\n",
     "edges = canny(image, sigma=4, low_threshold=0, high_threshold=30)\n",
     "\n",
     "# radii range from 33 to 35\n",
@@ -828,7 +796,7 @@
     "       \n",
     "# display the original image with the circles highlighted\n",
     "fig, ax = plt.subplots(ncols=1, nrows=1, figsize=(10, 4), dpi=72*2)\n",
-    "image = io.imread(\"images/tablets.jpg\", as_gray=False)\n",
+    "image = io.imread(\"data/images/tablets.jpg\", as_gray=False)\n",
     "\n",
     "for index, row in df.iterrows():\n",
     "    # determine points on circle perimeters\n",
@@ -861,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
