--- a/B07_scikitlearn.ipynb
+++ b/B07_scikitlearn.ipynb
@@ -18,24 +18,6 @@
    "metadata": {},
    "source": [
     "## 1\n",
-    "Execute the following cell to activate styling for this tutorial"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.display import HTML\n",
-    "HTML(f\"<style>{open('my.css').read()}</style>\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2\n",
     "The iris flower is an excellent starting point for studying machine learning.  There are 3 common species of iris: setosa, versicolor and virginica.  What is interesting about these species is that they are easy to classify if we measure their petal and sepal width and length.  Each species cluster around a region in 4 dimensional space (the dimensions being (petal width, petal length, sepal width, sepal length).\n",
     "\n",
     "Let's start with a picture:"
@@ -49,7 +31,7 @@
    "source": [
     "from PIL import Image\n",
     "\n",
-    "image = Image.open(\"images/iris.png\")\n",
+    "image = Image.open(\"data/images/iris.png\")\n",
     "image"
    ]
   },
@@ -57,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3\n",
+    "## 2\n",
     "Let's examine our dataset with Pandas:"
    ]
   },
@@ -80,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4\n",
+    "## 3\n",
     "It will be helpful to add a new column to our dataframe where we use integers for the species.  We'll call this column 'target':"
    ]
   },
@@ -105,7 +87,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5\n",
+    "## 4\n",
     "With machine learning, we use the 4 dimensional space of (sepal_length, sepal_width, petal_length and petal_width) to classify the irises.  To get a feel for this, we would like to plot the 4 dimensional space with each iris, but that's impossible.  However, what we can do is create four 3 dimensional cross sections of the 4 dimensional space:"
    ]
   },
@@ -158,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6\n",
+    "## 5\n",
     "Now we take our dataframe and use it to train our model.  There are several different model we can use.  We will be using:<pre>KNeighborsClassifier\n",
     "LogisticRegression</pre>\n",
     "\n",
@@ -208,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7\n",
+    "## 6\n",
     "As you can see, there is some disagreement over what species the third iris belongs to.  \n",
     "\n",
     "Let's look at our 4 plots again, this time with the 3 new iris plotted.  Our 3 new irises are colored black, grey and silver:"
@@ -267,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8\n",
+    "## 7\n",
     "Bokeh is a Python interactive visualization library that is an alternative to using MatPlotLib.  Bokeh is designed to targets modern web browsers, but does work inline with Jupyter notebook provide you insert the line\"<pre>\n",
     "from bokeh.io import output_notebook\n",
     "output_notebook()</pre>\n",
@@ -310,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9\n",
+    "## 8\n",
     "Seaborn is another useful plotting library.  It is built on top of matplotlib and closely integrated with pandas data structures.  This is our original iris dataset with Seaborn:"
    ]
   },
@@ -348,7 +330,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 10\n",
+    "## 9\n",
     "In the above code we use Pandas \"melt\" method.  This is essentially a pivot function.  The original datafile is pivoted on \"species\"; this is the \"id_vars\" parameter.  All other columns are pivoted on this column.\n",
     "\n",
     "The resulting dataframe has 3 columns:\n",
@@ -398,7 +380,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
