changed title cells

--- a/A01_types.ipynb
+++ b/A01_types.ipynb
@@ -6,9 +6,7 @@
    "source": [
     "<div style=\"color:red;background-color:black\">\n",
     "Diamond Light Source\n",
-    "\n",
-    "<h1 style=\"color:red;background-color:antiquewhite\"> Python Language: Types</h1>  \n",
-    "\n",
+    "<br style=\"color:red;background-color:antiquewhite\"><h1>Python Language: Types</h1><br>\n",
     "©2000-20 Chris Seddon \n",
     "</div>"
    ]
