--- a/A09_file_IO.ipynb
+++ b/A09_file_IO.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "<div style=\"color:red;background-color:black\">\n",
     "Diamond Light Source\n",
-    "\n",
-    "<h1 style=\"color:red;background-color:antiquewhite\"> Python Language: FileIO</h1>  \n",
+    "<br style=\"color:red;background-color:antiquewhite\"><h1>Python Language: FileIO</h1>  \n",
     "\n",
     "©2000-20 Chris Seddon \n",
     "</div>"
@@ -394,7 +393,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
