--- a/A03_conditionals_and_loops.ipynb
+++ b/A03_conditionals_and_loops.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "<div style=\"color:red;background-color:black\">\n",
     "Diamond Light Source\n",
-    "\n",
-    "<h1 style=\"color:red;background-color:antiquewhite\"> Python Language: Conditionals and Loops</h1>  \n",
-    "\n",
+    "<br style=\"color:red;background-color:antiquewhite\"><h1>Python Language: Conditionals and Loops</h1>\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "©2000-20 Chris Seddon \n",
     "</div>"
    ]
@@ -307,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
