--- a/B01_numpy.ipynb
+++ b/B01_numpy.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "\"reshape\" takes an existing Numpy array and creates a new view on the same data.  The idea is that the new view contains different dimensionality data.  Since the data is unchanged, the new dimensions must contain the same number of data points as the original array.  Thus in the example below, we start with a 1 dimensional array with 24 elements and reshape it to a 3 dimensional array with 2 * 3 * 4 = 24 elements.  \n",
     "\n",
-    "<img src=\"resources/images/Slide9.jpg\" style=\"margin-bottom: -25%;\"/>\n"
+    "<img src=\"resources/images/Slide09.jpg\" style=\"margin-bottom: -25%;\"/>\n"
    ]
   },
   {
